<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gray"
    >
    
    <TextView 
        android:id="@+id/tv_subscribe_amount_10w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_subscribe_amount_10w"
        android:textColor="@color/white"
        />
    
    <TextView 
        android:id="@+id/tv_stop_loss_percent_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_stop_loss_percent_5"
        android:textColor="@color/white"
        />
	<TextView 
        android:id="@+id/tv_stop_loss_explain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_stop_loss_explain_text"
        android:textColor="@color/white"
        />
    
        <!-- 提交申请 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_commit_join_trade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_commit_apply_text" />
    </LinearLayout>
    
        <!-- 是否阅读并同意交易规则 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_agree_or_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:button="@null"
            android:checked="true"
            android:background="@drawable/bg_cb_read_rule_or_not"
            />

        <TextView
            android:layout_marginLeft="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_have_read_rule_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_trade_rule_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_trade_rule_text"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_right_quotes" />
    </LinearLayout>
</LinearLayout>