<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://wxxr.com.cn/binding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#1B1C1E"
        android:gravity="center_vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            bind:field="label"
            android:textColor="#FEFEFE" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared_text"
                android:textColor="#FEFEFE" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_default_text"
                android:textColor="#FF2101"
                android:gravity="center"
                bind:field="joinSharedNum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared_unit"
                android:textColor="#FEFEFE" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2F2D30" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#222325" >

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_stock" />

        <include layout="@layout/label_divider_vline" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_amount" />

        <include layout="@layout/label_divider_vline" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_profit_loss" />

        <include layout="@layout/label_divider_vline" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_date" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#010101" />

</LinearLayout>